<resources>
    <string name="app_name">ActiLife</string>
    <string name="icon_settings">Icon settings</string>
    <string name="bienvenue_sur_actilife">Bienvenue sur ActiLife</string>
    <string name="icone_de_l_activite">Icone de l\'activite</string>
    <string name="icone_retour">Icone retour</string>
    <string name="edit_icon">edit-icon</string>
    <string name="nom">Nom</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="rappel_hydratation">Rappel Hydratation</string>
    <string name="dsec_img_bouteille_d_eau">Bouteille d\'eau</string>
    <string name="text_notif_hydratation">Toc toc, c\'est l\'heure de s\'hydrater</string>
    <string name="hello_with_name">Hello %1$s</string>
    <string name="param_tres">Paramètres</string>
    <string name="desc_img_soleil">image de soleil</string>
    <string name="desc_img_lune">image de lune</string>
    <string name="desc_img_medicament">image de médicament</string>
    <string name="text_notif_reveil">C’est l’heure de se réveillez</string>
    <string name="text_notif_couchez">C’est l’heure de se couchez</string>
    <string name="text_notif_médicament">C’est l’heure de prendre vos</string>
    <string name="nomE">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="taille_cm">Taille (cm)</string>
    <string name="genre">Genre</string>
    <string-array name="genre_array">
        <item>Homme</item>
        <item>Femme</item>
    </string-array>
    <string name="rappel_de_coucher">Rappel de coucher</string>
    <string name="rappel_de_r_veil">Rappel de réveil</string>
    <string name="btnRetour_desc">Bouton retour</string>
    <string name="logo_app_desc">logo de l\'apk</string>
    <string name="motivation_sommeil">motivation_sommeil</string>
    <string name="desc_img_faire_exo">image humain qui fait du sport</string>
    <string name="text_notification_prochaine_activite">C\'est bientôt l\'heure de passer à la prochaine activité</string>
    <string name="text_notification_faire_sport">C\'est bientôt l\'heure de votre séance de sport</string>
    <string name="btnRetour_desc">le bouton de retour</string>
    <string name="logo_app_desc">le logo de l\'appli</string>
    <string name="titre_liste_medocs">Rappel de medicaments</string>
    <string name="heure_prise_medoc">heure de prise</string>
    <string name="nom_medoc">nom du medicament</string>
    <string name="text_ajout_medoc">Ajouter</string>
    <string name="type_medoc">type du medicament</string>
    <string name="text_ajout_medicament">Ajouter un Medicament</string>
    <string name="text_suppr_medoc">Supprimer un Medicament</string>
    <string name="liste_medicaments_a_prendre">La liste des medicaments a prendre</string>
    <string name="bouton_suppr_meoc">Supprimer un medicament</string>
    <string name="annuler_medoc">Annuler</string>
    <string name="desc_img_faire_exo">image humain qui fait du sport</string>
    <string name="text_notification_prochaine_activite">C\'est bientôt l\'heure de passer à la prochaine activité</string>
    <string name="text_notification_faire_sport">C\'est bientôt l\'heure de votre séance de sport</string>
    <string name="listes_activites_sportives">La liste des activites a effetuer </string>
    <string name="titre_liste_activites">Planning des Activités</string>
    <string name="texte_suppr_activites">Supprimer une Activité</string>
    <string name="texte_ajout_activite">Ajouter une nouvelle Activité</string>
    <string name="nom_activite">nom de l\'activite</string>
    <string name="heure_debut_activite">heure de début</string>
    <string name="heure_fin_activite">heure de fin</string>
    <string name="annuler_activite">Annuler</string>
    <string name="ajouter_activite">Ajouter</string>
    <string name="boutton_suppr_activite">Supprimer activite</string>
    <string name="mdm">Chaque petit effort te rapproche de la meilleure version de toi-même.</string>

    <string name="bouton_ok">OK</string>
    <string name="demande_objectif_poids">Quelle est votre objectif ?</string>
    <string name="objectif_poids_initial">80</string>
    <string name="text_poids_restant2">de votre objectif</string>
    <string name="text_poids_restant1">Vous êtes à</string>
    <string name="demande_poids_actuelle">Quelle est votre poids actuelle ?</string>
    <string name="ajouter_un_plat">Ajouter un plat</string>
    <string name="calories_ing_r_s_aujourd_hui">calories ingérés aujourd’hui</string>
    <string name="_26">26%</string>
    <string name="actilife">ActiLife</string>
    <string name="quantit">Quantité</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter">Ajouter</string>
    <string name="saisisez_votre_nouvelle_objectif_du_jour">Saisisez votre nouvelle objectif du jour</string>
    <string name="_0">0</string>
    <string name="motivation">Motivation</string>
    <string name="logo_actilife">Logo ActiLife</string>
    <string name="retour">Retour</string>
    <string name="desc_img_soleil">image de soleil</string>
    <string name="desc_img_lune">image de lune</string>
    <string name="desc_img_medicament">image de médicament</string>
    <string name="text_notif_reveil">C’est l’heure de se réveillez</string>
    <string name="text_notif_couchez">C’est l’heure de se couchez</string>
    <string name="text_notif_médicament">C’est l’heure de prendre vos</string>

</resources>