<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <!-- Bouton retour (image) -->
        <ImageView
            android:id="@+id/btnRetour1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/btnRetour_desc"/>

        <!-- Espace flexible pour centrer le logo et le nom -->
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <!-- LinearLayout pour le logo et le nom -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logoApp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo_app_desc"/>

            <!-- Nom de l'application -->
            <TextView
                android:id="@+id/nomApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/primaryColor"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

        <!-- Espace flexible pour bien centrer le logo et le nom -->
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>
