<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Inclure l'en-tête -->
    <include
        android:id="@+id/enteteAjoutMedicament"
        layout="@layout/entete_ajout_medicament"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Contenu principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/enteteAjoutMedicament"
        android:layout_marginTop="20dp">

        <!-- Champ : Nom du médicament -->
        <EditText
            android:id="@+id/nomMedicament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/border_edittext"
            android:hint="@string/nom_medoc"
            android:autofillHints="name"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="23sp"
            android:textStyle="normal" />

        <!-- Champ : Type du médicament -->
        <EditText
            android:id="@+id/typeMedicament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/border_edittext"
            android:hint="@string/type_medoc"
            android:autofillHints="name"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="23sp"
            android:textStyle="normal" />

        <!-- Champ : Heure (choix via TimePicker) -->
        <EditText
            android:id="@+id/heureMedicament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/border_edittext"
            android:hint="@string/heure_prise_medoc"
            android:focusable="false"
            android:clickable="true"
            android:padding="16dp"
            android:textSize="23sp"
            android:textStyle="normal" />

        <!-- Liste des heures ajoutées dynamiquement -->
        <LinearLayout
            android:id="@+id/layoutHeuresAjoutees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:divider="?android:attr/dividerVertical"
            android:showDividers="middle"
            android:dividerPadding="4dp" />

        <!-- Bouton Ajouter -->
        <Button
            android:id="@+id/btnAjouterMedicament2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_button"
            android:text="@string/text_ajout_medoc"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
