<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".RappelSommeilActivity">
<!--en tete ici-->

    <include
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/entete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:gravity="center">

            <TextView
                android:text="@string/rappel_de_coucher"
                android:textSize="18sp"
                android:textColor="@color/blueColor"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp">
                <GridLayout
                    android:id="@+id/bedGrid"
                    android:columnCount="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alignmentMode="alignMargins"
                    android:rowCount="2"/>
            </HorizontalScrollView>

            <TextView
                android:text="@string/rappel_de_r_veil"
                android:textSize="18sp"
                android:textColor="@color/blueColor"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                        <GridLayout
                            android:id="@+id/wakeGrid"
                            android:columnCount="7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:rowCount="2"
                            android:layout_marginBottom="16dp"/>
            </HorizontalScrollView>


            <!--   Message de motivation ici     -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="16dp"
                android:orientation="vertical"
                android:background="@drawable/rounded_container"
                android:gravity="center">

                <TextView
                    android:id="@+id/motivation_sommeil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motivation_sommeil"
                    android:textColor="@color/blueColor"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>